# cv

./: 404.html  Cargo.toml  README.md  index.html  mkdocs.yml  requirements.txt
.github/workflows/: book.yml  rust.yml
docs/: index.md
docs/getting-started/: first-steps.md  index.md  installation.md
docs/guides/: index.md  projects.md  tools.md  zig.md
getting-started/: index.html
getting-started/first-steps/: index.html
getting-started/installation/: index.html
guides/: index.html
guides/projects/: index.html
guides/tools/: index.html
guides/zig/: index.html
search/: search_index.json
src/: lib.rs  main.rs
src/project/: mod.rs
tests/: cli_behaviour.rs  cli_help.rs
tests/snapshots/: cli_help__cli_help_printout.snap  cli_help__cli_zig_help_printout.snap
