[package]
name = "cv"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5.47"
ureq = "3.1"
serde_json = "1.0"
indicatif = "0.18"
log = "0.4"
env_logger = "0.11"
clap-cargo = "0.17.1"

[dev-dependencies]
insta = "1.43.2"
assert_cmd = "2.0"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
